examples/showcase/tests/ui/missing_required_prop.stderr
error[E0277]: missing a required prop: damask_showcase::notice::__DamaskNotice_title
 --> tests/ui/missing_required_prop.rs:7:51
  |
7 |     let _ = Notice::__damask_props().detail(None).__damask_build();
  |                                                   ^^^^^^^^^^^^^^ a required prop was not given
  |
  = help: the trait `damask::props::Provided` is not implemented for `damask_showcase::notice::__DamaskNotice_title`
  = note: a prop is required unless its type is `Option<_>`, which makes leaving it out mean `None`
  = note: `#[component(default)]` on the struct makes every prop skippable, filling the rest from its `Default`
help: the trait `damask::props::Provided` is implemented for `damask::props::Set`
 --> $WORKSPACE/crates/damask/src/props.rs
  |
  | impl Provided for Set {}
  | ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `damask_showcase::notice::__DamaskPropsNotice::<__DamaskM0>::__damask_build`
 --> src/notice.rs
  |
  | #[derive(Component)]
  |          ^^^^^^^^^ required by this bound in `__DamaskPropsNotice::<__DamaskM0>::__damask_build`
  = note: this error originates in the derive macro `Component` (in Nightly builds, run with -Z macro-backtrace for more info)
